app/dotnetcore/02-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: cnb-dotnetcore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnb-dotnetcore
  template:
    metadata:
      labels:
        app: cnb-dotnetcore
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port:  "8080"
    spec:
      containers:
        - image: harbor.mytanzu.xyz/library/cnb-dotnet-core
          name: app
          resources:
            limits:
              memory: 1Gi
          ports:
            - containerPort: 8080
