app/dotnetcore/03-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: cnb-dotnetcore
spec:  
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: cnb-dotnetcore
