app/dotnetcore/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: dotnetcore  
spec:
  rules:
  - host: dotnetcore-kpackdemo.tools.mytanzu.xyz
    http:
      paths:
      - backend:
          service:
            name: app
            port:
              name: http
        path: /
        pathType: Prefix
